Решил задание семинар8

--- a/index_home.html
+++ b/index_home.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <header class="header">
-        <h2 class="header-item_new">GrowBe</h2>
-        <a style="color: chocolate;" class="header-item" href="#">Home</a>
+        <div class="header-item_new">
+            <img src="./asset_home/img_home/logo.png">
+            <img src="./asset_home/img_home/GrowBe.png">
+        </div>
+        <a class="header-item color_home" href="#">Home</a>
         <a class="header-item" href="#">About Us</a>
         <a class="header-item" href="#">Services</a>
         <a class="header-item" href="#">Features</a>
@@ -23,7 +26,8 @@
             <p class="intro_text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</p>
             <div class="intro_button_wrapper">
                 <button class="intro_button">Start Now</button>
-                <a class="header-item" href="#">Watch Video</a>
+                <br>
+                <a class="intro-item" href="#">Watch Video</a>
             </div>
         </div>
         <img src="./asset_home/img_home/pngfind 1.png">
@@ -35,6 +39,28 @@
         <img src="./asset_home/img_home/4.png">
         <img src="./asset_home/img_home/5.png">
         <img src="./asset_home/img_home/2.png">
+    </section>
+    <section class="intro_card">
+        <div>
+            <img src="./asset_home/img_home/icon.png">
+            <h1 class="intro_title_card">Grow Your Business</h1>
+            <p class="intro_text_card">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <a class="intro_item_card" href="#">Read More...</a>
+        </div>
+
+        <div class="item_card">
+            <img src="./asset_home/img_home/icon2.png">
+            <h1 class="intro_title_card">Get Quality Ieads</h1>
+            <p class="intro_text_card">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <a class="intro_item_card" href="#">Read More...</a>
+        </div>
+
+        <div>
+            <img src="./asset_home/img_home/icon3.png">
+            <h1 class="intro_title_card">Drive More Sales</h1>
+            <p class="intro_text_card">Leverage agile frameworks to provide a robust synopsis for high level overviews.</p>
+            <a class="intro_item_card" href="#">Read More...</a>
+        </div>
     </section>
 </body>
 </html>
