Решил задания семинар9

--- a/index_home.html
+++ b/index_home.html
@@ -62,5 +62,34 @@
             <a class="intro_item_card" href="#">Read More...</a>
         </div>
     </section>
+
+    <section class="intro-services contaner">
+        <div class="services-item-big contaner">
+            <h1 class="services-title">Why You Should Choose Us.</h1>
+            <p class="services-text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business
+                applications through revolutionary catalysts..</p>
+        </div>
+        <div class="services-item contaner">
+            <img src="./asset_home/img_home/img_leght.png">
+            <h2 class="intro_title_services">Keyword Research</h2>
+            <p class="services-text-content">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+            <button class="intro_button_services">Learn More ></button>
+        </div>
+
+        <div class="services-item contaner">
+            <img src="./asset_home/img_home/img_senter.png">
+            <h2 class="intro_title_services">Seo Optimazadion</h2>
+            <p class="services-text-content">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+            <button class="intro_button_services">Learn More ></button>
+        </div>
+
+        <div class="services-item contaner">
+            <img src="./asset_home/img_home/img_right.png">
+            <h2 class="intro_title_services">Social Marketing</h2>
+            <p class="services-text-content">Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+            <button class="intro_button_services">Learn More ></button>
+        </div>
+        
+    </section>
 </body>
 </html>
